version/0.31/_sources/api/solver/_autosummary/settings/wall_film_1.rst.txt
:orphan:

.. _wall_film_1:

wall_film
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.wall_film_1
    :show-inheritance:

.. rubric:: Attributes

========================================================================   ===========================================================================================

Attribute                                                                                                                                                      Summary

========================================================================   ===========================================================================================
:ref:`eulerian_film_wall <eulerian_film_wall>`                                                                                                 As Eulerian Film Wall?.

:ref:`film_condition_type <film_condition_type>`                                                    Film Condition Type (0: Boundary Condition, 1: Initial Condition).

:ref:`film_height <film_height_1>`                                                                                                                        Film Height.

:ref:`flux_momentum <flux_momentum>`                                                                                                         Flux momentum components.

:ref:`relative_initial_film_velocity <relative_initial_film_velocity>`                                                  Enable/Disable Relative Initial Film velocity.

:ref:`include_film_momentum_pressure <include_film_momentum_pressure>`                                                                Include Film Momentum Pressure?.

:ref:`film_temperature <film_temperature_1>`                                                                                                         Film Temperature.

:ref:`film_passive_scalar <film_passive_scalar>`                                                                                                       Passive Scalar.

:ref:`enable_film_source_terms <enable_film_source_terms>`                                                                                  Enable Film Source Terms?.

:ref:`film_mass_source <film_mass_source>`                                                                                                           Film Mass Source.

:ref:`momentum_source <momentum_source>`                                                                                                   Momentum source components.

:ref:`film_heat_source <film_heat_source>`                                                                                                           Film Heat Source.

:ref:`film_passive_scalar_source <film_passive_scalar_source>`                                                                             Film Passive Scalar Source.

:ref:`enable_film_phase_change <enable_film_phase_change>`                                                                                  Enable Film Phase Change?.

:ref:`phase_change_model <phase_change_model>`                                 Phase Change Model: Diffusion Balance [0]; Wall Boundary Layer [1]; User Defined [2] -.

:ref:`film_condensation_constant <film_condensation_constant>`                                                                             Film Condensation Constant.

:ref:`film_vaporization_constant <film_vaporization_constant>`                                                                             Film Vaporization Constant.

:ref:`film_condensation_rate <film_condensation_rate>`                                                                                         Film Condensation Rate.

:ref:`film_vaporization_rate <film_vaporization_rate>`                                                                                         Film Vaporization Rate.

:ref:`enable_flow_momentum_coupling <enable_flow_momentum_coupling>`                                                                   Enable Flow Momentum Coupling?.

:ref:`enable_dpm_wall_splash <enable_dpm_wall_splash>`                                                                                        Enable DPM Wall Splash?.

:ref:`allow_film_boundary_separation <allow_film_boundary_separation>`                                                                Allow Film Boundary Separation?.

:ref:`impingement_model <impingement_model_1>`                                                                                                      Impingement Model.

:ref:`number_of_splashed_particles <number_of_splashed_particles>`                                                                       Number of Splashed Particles.

:ref:`critical_temperature_factor <critical_temperature_factor_1>`                                                                        Critical Temperature Factor.

:ref:`wall_roughness_length_ra <wall_roughness_length_ra>`                                                                                   Wall Roughness Length Ra.

:ref:`wall_roughness_length_rz <wall_roughness_length_rz>`                                                                                   Wall Roughness Length Rz.

:ref:`upper_deposition_limit_offset <upper_deposition_limit_offset_1>`                                                             Upper Deposition Limit Offset [K] .

:ref:`deposition_delta_t <deposition_delta_t_1>`                                                                                              Deposition Delta T [K] .

:ref:`laplace_number_constant <laplace_number_constant>`                                                                                     Laplace Number Constant .

:ref:`partial_evaporation_ratio <partial_evaporation_ratio>`                                                                               Partial Evaporation Ratio .

:ref:`enable_film_contact_angle_force <enable_film_contact_angle_force>`                                                             Enable Film Contact Angle Force?.

:ref:`film_contact_angle_mean <film_contact_angle_mean>`                                                                                      Film Contact Angle Mean.

:ref:`film_contact_angle_rstd <film_contact_angle_rstd>`                                                               Film Contact Angle Relative Standard Deviation.

:ref:`film_contact_angle_beta <film_contact_angle_beta>`                                                                                Film Contact Angle Force Beta.

:ref:`film_vof_coupling_high <film_vof_coupling_high>`                                                                                 Enable Film-to-VOF Transition?.

:ref:`film_vof_trans_high <film_vof_trans_high>`                                                                                      Film to VOF Transition Criteria.

:ref:`film_vof_trans_high_relax <film_vof_trans_high_relax>`                                                                        Film to VOF Transition Relaxation.

:ref:`film_vof_coupling_low <film_vof_coupling_low>`                                                                                   Enable VOF-to-Film Transition?.

:ref:`film_vof_trans_low <film_vof_trans_low>`                                                                                        VOF to Film Transition Criteria.

:ref:`film_vof_trans_low_relax <film_vof_trans_low_relax>`                                                                          VOF to Film Transition Relaxation.

========================================================================   ===========================================================================================

.. rubric:: Included in:

======================================   ======================================

Parent                                                                  Summary

======================================   ======================================
:ref:`wall_child <wall_child>`                     'child_object_type' of wall.

:ref:`phase_25_child <phase_25_child>`            'child_object_type' of phase.

:ref:`settings_28 <settings_28>`             Domain name to define settings on.

:ref:`phase_51_child <phase_51_child>`            'child_object_type' of phase.

======================================   ======================================

